Compatibility Update
- Revert to Java 8
- REMOVE problematic dependency Jackson and migrate to GSON for JSON